# minigrep

./: .gitignore  README.md  package.json  pnpm-lock.yaml  rustfmt.toml
crates/binding/: Cargo.toml
crates/binding/src/: lib.rs
crates/minigrep/src/: lib.rs  main.rs
